feat: Add a dedicated support page and link it from the homepage, replacing the direct email link.

--- a/index.html
+++ b/index.html
@@ -112,9 +112,7 @@
 
             <div class="links">
                 <a href="privacy.html">Privacy Policy</a>
-                <div class="support-info">
-                    Need help? <a href="mailto:support@wartle.app">support@wartle.app</a>
-                </div>
+                <a href="support.html">Support</a>
             </div>
         </div>
     </div>
