docs: Update privacy policy to reflect data export format change from CSV to ZIP archive containing JSON files.

--- a/privacy.html
+++ b/privacy.html
@@ -278,7 +278,7 @@
             <h3>Access and Export</h3>
             <ul>
                 <li>View all your data within the app</li>
-                <li>Export transactions to CSV format for personal use</li>
+                <li>Export transactions to a ZIP archive containing JSON files for personal use</li>
             </ul>
 
             <h3>Deletion</h3>
